<resources>
    <string name="app_name">Exercice3_Audrey_Dongmo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="no_account">DON\'T HAVE ANY ACCOUNT?</string>
    <string name="or">Or</string>
    <string name="sign_up">SIGN UP</string>
    <string name="passwd">Enter our password again</string>
    <string name="sign_in">SIGN IN</string>
    <string name="account">ALREADY HAVE AND ACCOUNT ?</string>





</resources>
