<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_edited"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="25sp"
        android:text="Create a new account"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintLeft_toLeftOf="@id/userName"
        />
    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/background_edited"
        android:text="Username"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_gallery"
        app:layout_constraintVertical_bias="0.23"
        android:layout_marginLeft="55dp"
        android:alpha="0.3"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_email_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@id/mail"
        app:layout_constraintLeft_toLeftOf="@id/mail"
        />
    <EditText
        android:id="@+id/mail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/background_edited"
        android:text="email"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginLeft="55dp"
        android:alpha="0.3"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_enhanced_encryption_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@id/passwd"
        app:layout_constraintLeft_toLeftOf="@id/passwd"
        />
    <EditText
        android:id="@+id/passwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/background_edited"
        android:text="password"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginLeft="55dp"
        android:alpha="0.3"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_enhanced_encryption_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toTopOf="@id/passwdA"
        app:layout_constraintLeft_toLeftOf="@id/passwdA"
        />
    <EditText
        android:id="@+id/passwdA"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/background_edited"
        android:text="@string/passwd"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwd"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginLeft="55dp"
        android:alpha="0.3"
        />
    <Button
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/background_edited"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwdA"
        />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="13dp"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="190dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/no_account"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:id="@+id/face"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="140dp"
        android:src="@mipmap/ic_launcher_logofacebookt_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/no_account"
        app:layout_constraintLeft_toRightOf="@id/face"
        />
    <ImageView
        android:id="@+id/google"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:src="@mipmap/ic_launcher_logogoogle"
        app:layout_constraintLeft_toRightOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        />



</androidx.constraintlayout.widget.ConstraintLayout>