<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakground"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="400dp"
        android:alpha="0.1"
        android:src="@mipmap/ic_launcher_basket_foreground"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.579" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@mipmap/ic_launcher_logo"
        android:layout_marginLeft="170dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="CREADEC SPORT"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/user"
        app:layout_constraintLeft_toLeftOf="@id/user"


        />
    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/bakground"
        android:text="Username"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginLeft="50dp"
        android:alpha="0.2"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_enhanced_encryption_black_24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/login"
        app:layout_constraintLeft_toLeftOf="@id/login"
        />
    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/bakground"
        android:text="Password"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:paddingLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginLeft="50dp"
        android:alpha="0.2"
        />
    <EditText
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/background_edited"
        android:text="SIGN IN"
        android:fontFamily="sans-serif"
        android:textColor="@color/pink"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="120dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="190dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/no_account"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:id="@+id/face"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher_logofacebookt_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/no_account"
        app:layout_constraintLeft_toRightOf="@id/face"
        />
    <ImageView
        android:id="@+id/google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_launcher_logogoogle"
        app:layout_constraintLeft_toRightOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        />

</androidx.constraintlayout.widget.ConstraintLayout>